2006-??-??: 1.06
	allowed extern enums

2006-08-16: 1.05
	moved Md5 to haxe package.
	some method renamed in neko.FileSystem.
	added neko.remoting.Server.setLogger
	fixed bug in haxe.Serializer on neko (was preventing List serialization)
	fixed bugs in haXe.Unserializer on neko (invalid enum tag & pbs with UTF8 strings)
	fixed sqlite escape & quote , added BOOL support
	allowed direct property access in getter/setter (prevent rec loop)
	allowed event-driven neko http requests
	forbidden "name" static in js
	don't allow variable redeclaration in subclasses
	added && || and ! in conditional compilation rules
	metas : removed __construct__ and class.toString.
	metas : __super__ and __interfaces__ now optional
	added Type api (seperated from Reflect)
	flash 9 support

2006-07-25: 1.04
	added macros in haxe.Template
	allowed static variables access from a signature shortcut
	allowed new Signature when signature is a class
	fixed : modulo priority is now higher than mult and div
	fixed bug in haxe.Proxy generation
	fixed more stack overflows with recursive signatures
	fixed bug in class <: anonymous subtyping (inherited fields)
	override is not mandatory by default (need --override)
	added neko just-in-time
	fixed bugs in haxe.Serializer and haxe.Unserializer (enum format change)
	changed "signature" by "typedef" (more comprehensible)
	restricted objects comparisons
	fixed bug with js operator priority
	improved performances for haxe.Serializer and haxe.Unserializer
	fixed bug in static variable lookup (should look class in the last case)
	prevented several prints of "not enough arguments".

2006-06-23: 1.03
	haxedoc executable now part of the distribution
	removed selectDB from the neko.db.Connection API
	added optional parameters with selection
	removed --no-flash-opt-args
	changes in SWF packages handling
	fixed optional leading comma in anonymous object and array values
	fixed bug in inheritend constructor type parameters